<resources>
    <string name="app_name">My Recipe</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="skip_button_text">Skip</string>
    <string name="tab_recommend">Recommend</string>
    <string name="tab_category">Category</string>
    <string name="search_hint">Keywords</string>
    <string name="menu_item_1_title">Home</string>
    <string name="menu_item_2_title">Add New</string>
    <string name="menu_item_3_title">Message</string>
    <string name="menu_item_4_title">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_recipe_form">RecipeFormActivity</string>
</resources>