<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Tab Panel -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorHeight="3dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_recommend"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_category"/>

    </com.google.android.material.tabs.TabLayout>

    <!-- Search Area -->
    <LinearLayout
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_layout"
        android:padding="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:background="@null"/>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_search"/>

    </LinearLayout>

    <!-- Gallery Area -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/galleryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <!--    <ViewPager-->
<!--        android:id="@+id/gallery_view_pager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_below="@id/search_area"/>-->

<!--    &lt;!&ndash; Content List Area &ndash;&gt;-->
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/content_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@id/gallery_view_pager"/>-->

</RelativeLayout>
